--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@
 spring-comprehensive-study.iml
 
 spring-ioc/spring-ioc.iml
+spring-ioc/dependency-injection/dependency-injection.iml
+spring-ioc/dependency-source/dependency-source.iml
