--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,6 @@ spring-ioc/spring-ioc.iml
 spring-ioc/dependency-injection/dependency-injection.iml
 spring-ioc/dependency-source/dependency-source.iml
 spring-ioc/bean-scope/bean-scope.iml
+
+spring-resource/spring-resource.iml
+spring-resource/resource/resource.iml
