--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
 
     <modules>
         <module>spring-ioc</module>
+        <module>spring-resource</module>
     </modules>
 
     <properties>
