--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
     <modules>
         <module>spring-ioc</module>
         <module>spring-resource</module>
+        <module>i18n</module>
     </modules>
 
     <properties>
