--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <module>spring-resource</module>
         <module>i18n</module>
         <module>validation</module>
+        <module>data-binding</module>
     </modules>
 
     <properties>
