--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
         <module>i18n</module>
         <module>validation</module>
         <module>data-binding</module>
+        <module>conversion</module>
     </modules>
 
     <properties>
